--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -1,7 +1,8 @@
-
 <div class="course-md">
 
     <h2>{{ (course$ | async)?.description }}</h2>
+
+    <messages></messages>
 
     <div *ngIf=" detail$ | async as lessonDetail else masterTpl">
 
@@ -23,8 +24,6 @@
             (selected)="selectDetail($event)"></lessons-list>
 
     </ng-template>
-
-
 
 </div>
 
